-SWtbot, unit test and some initial code to fill some egerrit tab
Signed-off-by: lmcbout <lmcbout@gmail.com>